<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ppgind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ppgind" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/scanresult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickPlus"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickMinus"
                android:text="@string/minus" />

            <Button
                android:id="@+id/addproduct"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickAddProduct"
                android:text="@string/addproduct" />

            <Button
                android:id="@+id/backtomenu"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickBacktomenu"
                android:text="@string/backtomenu" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>