<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ppgind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ppgind" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/showproducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/enterid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/enterid"
               />

            <Button
                android:id="@+id/basketminus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickMinus"
                android:text="@string/minus" />

            <Button
                android:id="@+id/basketpayment"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickPayment"
                android:text="@string/basketpayment" />

            <Button
                android:id="@+id/backtomainmenu"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClikBacktomainmenu"
                android:text="@string/backtomenu" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>