<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ppgind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ppgind" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <Button
                android:id="@+id/deposit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/deposit"
                android:onClick="onClickDeposit"/>

            <Button
                android:id="@+id/accountbalance"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickAccountBalance"
                android:text="@string/accountbalance" />

            <Button
                android:id="@+id/backtomenu"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onClickBacktomenu"
                android:text="@string/backtomenu" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

